==> nguyenkhanhtung89/bk10/BK10-TAXI-GSM/MCU-ST-GSM/src/Serial.c <==
#include "Serial.h"
#include "j1939.h"
#include "utils.h"
#include "osObjects.h"
#include "power.h"
#include "flash.h"
#include "ds18b20.h"
#include "digital.h"
#include "utils.h"

void Serial_Parse(uint8_t* data, uint16_t Len){//     HD   PARAM
	uint8_t cmd = 0;
	u8 crc = 0;
	//process data
	if(data[0] == '>'){    // >0x01 msg
		cmd = data[1];
		switch(cmd){
			case EC21_DATA_MESSAGE://0x01
				EC21_data_parser(data + 2);
				break;
			case USART2_FORWARD_MSG://0x02
				USART2PushBuffer(data + 2, Len - 2);
				break;
			case UART4_FORWARD_MSG://0x03
				UART4PushBuffer(data + 2, Len - 2);
				break;
			case STORE_FLASH_DATA:{//0x04
				uint16_t data_len = 0;
				uint32_t crc32_flash = 0;
				uint32_t crc32_data = 0;
				
				/* compare data */
				data_len = data[2] << 8 | data[3];
				
				if(data_len != (Len - 4)){
					//SerialPushStr("~~~INVALID DATA~~~", END_LF);
					break;
				}
				
				if(data_len >= 500){
					//SerialPushStr("***INVALID DATA***", END_LF);
					break;
				}
				
				/* read old data */
				FLASH_ReadBufData(DEV_CONFIG_ADDR, serial_buffer, data_len);
				
				crc32_data = CRC32Software(data + 4, (data_len - 4));
				crc32_flash = CRC32Software(serial_buffer, (data_len - 4));
				
				if(crc32_data != crc32_flash){
					FLASH_WriteBufData(DEV_CONFIG_ADDR, data + 4, data_len);
					SerialPushStr("###STORE_FLASH_DATA###", END_LF);
				}else{
					SerialPushStr("###DATA NO CHANGE###", END_LF);
				}
				break;
			}
			case GET_FLASH_DATA:{//0x05
				u16 rlen_ = 0;
				u16 request_len = 0;
				u32 crc32 = 0;
				u32 cal_crc32 = 0;
				request_len = data[2] << 8 | data[3];
				serial_buffer[0] = '>';
				serial_buffer[1] = 11;
				rlen_ = 2;
				
				FLASH_ReadBufData(DEV_CONFIG_ADDR, flash_buffer, (request_len + 4));
				
				cal_crc32 = CRC32Software(flash_buffer, request_len);
				
				crc32 = (flash_buffer[request_len] << 24) | (flash_buffer[request_len + 1] << 16) | (flash_buffer[request_len + 2] << 8) | flash_buffer[request_len + 3];
				
				if(cal_crc32 == crc32){
					memcpy(serial_buffer + rlen_, flash_buffer, (request_len + 4));
					rlen_ = rlen_ + (request_len + 4);
					crc = CRC_8BitsCompute(serial_buffer, rlen_);
					serial_buffer[rlen_] = crc;
					rlen_ = rlen_ + 1;
					SerialPushBuffer(serial_buffer, rlen_);
					osDelay(500);
				}else{
					SerialPushStr("***INVALID CRC FROM FLASH***", END_LF);
				}
				
				break;
			}
			default:
				break;
		}
	}else{
		if (!strncmp((char*)data, "GOTO_BOOT_MODE", 14)) {
			SerialPushBufferWithCS((uint8_t*)">>OK", 4);
			//set flag update firmware on bootloader
			FLASH_WriteData(FLG_UPDATE_FW_ADDR, (u32)0x01, 1);
		} else if (!strncmp((char*)data, "VERSION?", 8)) {
			serial_buffer[0] = '>';
			serial_buffer[1] = '>';
			serial_buffer[2] = 'V';
			serial_buffer[3] = MCU_VERSION;
			SerialPushBufferWithCS(serial_buffer, 4);
		} else if (!strncmp((char*)data, "REBOOT", 6)) {
			SerialPushBufferWithCS((uint8_t*)">>OK", 4);
			ec21_power_rst(5);
		} else if (!strncmp((char*)data, "BATOFF", 6)) {
			SerialPushBufferWithCS((uint8_t*)">>OK", 4);
			device_battery_off(5);
		}
		if(mcu_config.TaxiMode == 0){
			if (!strncmp((char*)data, "CAMON", 5)) {
				SerialPushBufferWithCS((uint8_t*)">>OK", 4);
				osDelay(1000);
				GPIO_ResetBits(PWR_5VOUT_GPIO_PORT, PWR_5VOUT_GPIO_PIN);
			} else if (!strncmp((char*)data, "CAMOFF", 6)) {
				SerialPushBufferWithCS((uint8_t*)">>OK", 4);
				GPIO_SetBits(PWR_5VOUT_GPIO_PORT, PWR_5VOUT_GPIO_PIN);
			} else if (!strncmp((char*)data, "CAMRST", 6)) {
				SerialPushBufferWithCS((uint8_t*)">>OK", 4);
				GPIO_SetBits(PWR_5VOUT_GPIO_PORT, PWR_5VOUT_GPIO_PIN);
				osDelay(4000);
				GPIO_ResetBits(PWR_5VOUT_GPIO_PORT, PWR_5VOUT_GPIO_PIN);
			}
		}
	}
}

void vSerialTask(const void* args){
	osEvent evt;
  Serial_Mail_Typedef * msg;
	Buzzer_StatusDef buzz;
	for(;;){
		evt = osMailGet(SerialPkgMailBox, 1000);
    if (evt.status == osEventMail) {
			/* Get message*/
			msg = (Serial_Mail_Typedef*)evt.value.p;
			msg->data[msg->size] = 0;
			//process data
			if(msg->data[0] == '>'){
				u8 cs = CRC_8BitsCompute(msg->data, msg->size - 1);
				if(cs == msg->data[msg->size - 1]){
					msg->data[msg->size - 1] = 0;
					Serial_Parse((msg->data + 1), (msg->size - 2));
				}else{
					SerialPushStr("~~~~~~~~~~~~~~~~ERROR CHECK SUM!!", END_LF);
				}
				ec21_status.flg_ec21_rdy = 1;
				ec21_status.flg_ec21_crash = 0;
			}
			/* Free data block mail box */
			osMailFree(SerialPkgMailBox, msg);
		}else if(evt.status == osEventTimeout){
			ec21_status.ec21_cnn_timeout ++;
			
			if((ec21_status.flg_ec21_crash == 0) && (ec21_status.flg_ec21_rdy == 1)){
				if((buzz == OverSpeed) || (buzz == DriveContinuousOverTime)){
					Set_Led_Status(BUZZER, None);
				}
					
				if(ec21_status.ec21_cnn_timeout >= 120){
					ec21_status.ec21_cnn_timeout = 0;
					EC21_PW_Reset();
					ec21_status.ec21_pw_rst_cnt ++;
					if(ec21_status.ec21_pw_rst_cnt > 5){
						//waranty notify -> LCD
						ec21_status.flg_ec21_crash = 1;
					}
					
					/* clear ec21 data */
					memset(&ec21_data, 0x0, sizeof(ec21_message_def));
				}
			}else	if(ec21_status.ec21_cnn_timeout >= time_reset_crash){
					if(time_reset_crash == 180){
						time_reset_crash = 900;
					}
					
					ec21_status.ec21_cnn_timeout = 0;
					EC21_PW_Reset();
					ec21_status.ec21_pw_rst_cnt ++;					
					/* clear ec21 data */
					memset(&ec21_data, 0x0, sizeof(ec21_message_def));
			}
			if(ec21_status.ec21_cnn_timeout > 10){
				//clear data
				memset(&ec21_data, 0x0, sizeof(ec21_message_def));
			}
		}
		/* get buzzer state */
		buzz = get_buzer_state();
		if(ec21_data.gps_status == 1){
			if(ec21_data.ov_speed_status == 1){
				Set_Led_Status(BUZZER, OverSpeed);
			}else if(ec21_data.drv_continue_status == 1){
				Set_Led_Status(BUZZER, DriveContinuousOverTime);
			}else if((buzz == OverSpeed) || (buzz == DriveContinuousOverTime)){
				Set_Led_Status(BUZZER, None);
			}
			loss_gps_cnt = 0;
		}else{
			if((buzz == OverSpeed) || (buzz == DriveContinuousOverTime))
				Set_Led_Status(BUZZER, None);
			
			if(PowerData.power_mode == POWER_SAVE){
				loss_gps_cnt ++;
				if(loss_gps_cnt >= 300){
					loss_gps_cnt = 0;
					/* poweroff device */
					SerialPushStr("<<<<<<- NO GPS OVER 5-MINUTE IN BATTERY MODE => POWER OFF AFTER 10s ->>>>>>", END_LF);
					osDelay(2000);
					device_battery_off(10);
				}
			}
		}
    osThreadYield();
	}
}

void UART_SendByte(USART_TypeDef* USARTx, uint8_t data){
	int32_t tick, delayPeriod;
	tick = osKernelSysTick(); // get start value of the Kernel system tick
	delayPeriod = osKernelSysTickMicroSec(50000);//50ms timeout
	
	/* Wait for USART Tx buffer empty */
	while((USART_GetFlagStatus(USARTx, USART_FLAG_TXE) == RESET) && (osKernelSysTick() - tick) < delayPeriod);
	/* Send byte through the UART peripheral */
	USART_SendData(USARTx, data);
}

void SerialUARTInit(void){
	GPIO_InitTypeDef GPIO_InitStructure;
	USART_InitTypeDef USART_InitStructure;
	
	/* Enable USART_EC21 GPIO clock */
	RCC_AHBPeriphClockCmd(USART_EC21_GPIO_CLK_TX, ENABLE);
	RCC_AHBPeriphClockCmd(USART_EC21_GPIO_CLK_RX, ENABLE);
	
	/* Enable USART_EC21 Clock */
	RCC_APB2PeriphClockCmd(USART_EC21_CLK, ENABLE);
	
	/* CFG AF mode */
	GPIO_InitStructure.GPIO_Mode 	= GPIO_Mode_AF;
	GPIO_InitStructure.GPIO_OType = GPIO_OType_PP;
	GPIO_InitStructure.GPIO_PuPd 	= GPIO_PuPd_NOPULL;
	GPIO_InitStructure.GPIO_Speed = GPIO_Speed_50MHz;
	
	/* Configure USART_COM_Tx */
	GPIO_InitStructure.GPIO_Pin = USART_EC21_TxPin;
	GPIO_Init(USART_EC21_GPIO_TX, &GPIO_InitStructure);
	GPIO_PinAFConfig(USART_EC21_GPIO_TX, USART_EC21_TxPinSource, USART_EC21_AF);
	
	/* Configure USART_COM_Rx */
	GPIO_InitStructure.GPIO_Pin = USART_EC21_RxPin;
	GPIO_Init(USART_EC21_GPIO_RX, &GPIO_InitStructure);
	GPIO_PinAFConfig(USART_EC21_GPIO_RX, USART_EC21_RxPinSource, USART_EC21_AF);
	
	/* USART_COM configuration*/
	USART_StructInit(&USART_InitStructure);
	USART_InitStructure.USART_BaudRate = 230400;
	USART_Init(USART_EC21, &USART_InitStructure);
	
  USART_ITConfig(USART_EC21, USART_IT_RXNE, ENABLE);
	USART_Cmd(USART_EC21, ENABLE);
	
	NVIC_EnableIRQ(USART_EC21_IRQn);
}
