==> nguyenkhanhtung89/bk10/BK10-DVBK/MCU-GD/Project bootLoader/src/Serial.c <==
#include "Serial.h"
#include "osObjects.h"
#include "string.h"
#include "stdio.h"
#include "stdlib.h"
#include "utils.h"
#include "fw.h"

static void Serial_Parse(uint8_t* msg, uint8_t Len){
	if(!strncmp((char*)msg, "GD_GOTO_BOOT_MODE", 17) || !strncmp((char*)msg, "VERSION?", 8)){
		res_msg[0] = '>';
		res_msg[1] = '>';
		res_msg[2] = 'G';
		res_msg[3] = 'D';
		res_msg[4] = 'B';
		res_msg[5] = 'O';
		res_msg[6] = 'O';
		res_msg[7] = 'T';
		SerialPushBufferWithCS(res_msg, 8);
	}else if(msg[0] == 0xFF){//> 0xFF NPKG  CRC
		int res = 0;
		res = FirmwareInfoParse(msg + 1);
		if((res == 0) || (res == -2)){
			SerialPushBufferWithCS((uint8_t*)">>OK", 4);
		}else{
			SerialPushBufferWithCS((uint8_t*)">>ERROR", 7);
		}
	}else if(msg[0] == 0xFD){//> 0xFD ID LEN CRC DATA
		FirmwarePackageParse(msg + 1);
	}
}

void vSerialTask(const void* args){
	osEvent evt;
	Serial_Mail_Typedef* msg;
	uint8_t cs = 0;
		
	/* Init usart */
	SerialUARTInit();
	
	SerialPushStr("GD MCU BOOTLOADER V1.1", END_LF);
	
	for(;;){
		/* Wait GSM message */
		evt = osMailGet(SerialPkgMailBox, 1000);//wait data
		if(evt.status == osEventMail){
			/* Get message*/
			msg = (Serial_Mail_Typedef*)evt.value.p;
			
			//process data
			if(msg->data[0] == '>'){
				cs = CRC_8BitsCompute(msg->data, msg->size - 1);
				if(cs == msg->data[msg->size - 1]){
					Serial_Parse((msg->data + 1), (msg->size - 2));
				}
			}
			
			/* Free data block mail box */
			osMailFree(SerialPkgMailBox, msg);
		}
		
		osThreadYield();
	}
}

void UART_SendByte(uint32_t USARTx, uint8_t data){
	int32_t tick, delayPeriod;
	tick = osKernelSysTick(); // get start value of the Kernel system tick
	delayPeriod = osKernelSysTickMicroSec(50 * 1000);//50ms timeout
	
	/* Wait for USART Tx buffer empty or timeout*/
	while((usart_flag_get(USARTx, USART_FLAG_TBE) == RESET) && (osKernelSysTick() - tick) < delayPeriod);
	usart_data_transmit(USARTx,(uint8_t)data);
}

void SerialUARTInit(void){
	rcu_periph_clock_enable(USART_COM_GPIO_CLK_TX);
	rcu_periph_clock_enable(USART_COM_GPIO_CLK_RX);
	rcu_periph_clock_enable(USART_COM_CLK);
	
	//connect port to USARTx Tx
	gpio_init(USART_COM_GPIO_TX, GPIO_MODE_AF_PP, GPIO_OSPEED_50MHZ,USART_COM_TxPin);
	
	//connect port to USARTx Rx
	gpio_init(USART_COM_GPIO_RX,GPIO_MODE_IN_FLOATING,GPIO_OSPEED_50MHZ,USART_COM_RxPin);
	
	//USART configure
	usart_deinit(USART_COM);
	usart_baudrate_set(USART_COM, USART_BAUDRATE);
	usart_parity_config(USART_COM,USART_PM_NONE);
	usart_word_length_set(USART_COM, USART_WL_8BIT);
	usart_stop_bit_set(USART_COM, USART_STB_1BIT);
	usart_receive_config(USART_COM, USART_RECEIVE_ENABLE);
	usart_transmit_config(USART_COM, USART_TRANSMIT_ENABLE);
	usart_enable(USART_COM);
	
	nvic_irq_enable(USART_COM_IRQn, 0, 0);
	usart_interrupt_enable(USART_COM, USART_INT_RBNE);
}
